// Adapted from https://github.com/googleapis/googleapis/blob/master/google/type/money.proto
syntax = "proto3";

import "google/protobuf/wrappers.proto";

package customProtoTypes;

option csharp_namespace = "OrderBook.Protos.CustomTypes";

// Name "DecimalValue" prevents conflict with C# Decimal type
message DecimalValue {

  // The whole units of the amount.
  google.protobuf.Int64Value units = 1;

  // Number of nano (10^-9) units of the amount.
  // The value must be between -999,999,999 and +999,999,999 inclusive.
  // If `units` is positive, `nanos` must be positive or zero.
  // If `units` is zero, `nanos` can be positive, zero, or negative.
  // If `units` is negative, `nanos` must be negative or zero.
  // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
  google.protobuf.Int32Value nanos = 2;
}

